--- a/index.html
+++ b/index.html
@@ -4,26 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Professional Portfolio | Your Name</title>
+  <title>Oluwasegun Portfolio | Developer</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            primary: '#3B82F6',
-            secondary: '#10B981',
-            dark: '#1F2937',
-            light: '#F3F4F6',
-          },
-          fontFamily: {
-            sans: ['Inter', 'sans-serif'],
-          },
-        }
-      }
-    }
-  </script>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
@@ -103,7 +87,7 @@
     <div class="max-w-6xl mx-auto px-6 py-20 flex flex-col md:flex-row items-center">
       <div class="md:w-1/2 mb-12 md:mb-0">
         <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6">
-          Hi, I'm <span class="gradient-text">Your Name</span>
+          Hi, I'm <span class="gradient-text">Oluwasegun</span>
         </h1>
         <h2 class="text-2xl md:text-3xl font-semibold text-gray-600 mb-8">
           Professional <span id="typing-text" class="text-primary"></span>
@@ -126,7 +110,7 @@
         <div class="relative">
           <div
             class="w-64 h-64 md:w-80 md:h-80 rounded-full bg-gradient-to-br from-primary to-secondary flex items-center justify-center">
-            <img src="https://via.placeholder.com/300" alt="Profile"
+            <img src="imgimg.jpg" alt="Profile"
               class="w-60 h-60 md:w-72 md:h-72 rounded-full object-cover border-4 border-white">
           </div>
           <div class="absolute -bottom-6 -right-6 bg-white p-4 rounded-lg shadow-lg">
@@ -135,7 +119,7 @@
                 <i class="fas fa-trophy text-xl"></i>
               </div>
               <div class="ml-3">
-                <p class="font-bold">5+ Years</p>
+                <p class="font-bold">2+ Years</p>
                 <p class="text-sm text-gray-600">Experience</p>
               </div>
             </div>
@@ -192,7 +176,7 @@
                 <h4 class="ml-3 font-semibold">Education</h4>
               </div>
               <p class="text-gray-600">
-                Bachelor's Degree in Computer Science from XYZ University
+                Bachelor's Degree in Statistics from LAUTECH University
               </p>
             </div>
             <div class="bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition duration-300">
@@ -203,7 +187,7 @@
                 <h4 class="ml-3 font-semibold">Experience</h4>
               </div>
               <p class="text-gray-600">
-                5+ years of professional experience in web development
+                2+ years of professional experience in web development
               </p>
             </div>
           </div>
@@ -499,7 +483,7 @@
                 <div class="ml-4">
                   <h4 class="font-semibold">Email</h4>
                   <a href="mailto:your.email@example.com"
-                    class="text-gray-600 hover:text-primary transition duration-300">your.email@example.com</a>
+                    class="text-gray-600 hover:text-primary transition duration-300">alabioluwasegun8@gmail.com</a>
                 </div>
               </div>
 
@@ -509,8 +493,8 @@
                 </div>
                 <div class="ml-4">
                   <h4 class="font-semibold">Phone</h4>
-                  <a href="tel:+1234567890" class="text-gray-600 hover:text-primary transition duration-300">+1 (234)
-                    567-890</a>
+                  <a href="tel:+2348107087430"
+                    class="text-gray-600 hover:text-primary transition duration-300">+2348107087430</a>
                 </div>
               </div>
 
@@ -520,7 +504,7 @@
                 </div>
                 <div class="ml-4">
                   <h4 class="font-semibold">Location</h4>
-                  <p class="text-gray-600">San Francisco, CA</p>
+                  <p class="text-gray-600">Lagos, Nigeria</p>
                 </div>
               </div>
             </div>
@@ -528,11 +512,11 @@
             <div class="mt-10">
               <h4 class="font-semibold mb-4">Follow Me</h4>
               <div class="flex space-x-4">
-                <a href="#"
+                <a href="https://www.linkedin.com/in/oluwasegun-michael-alabi-7b2506177/"
                   class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center text-primary hover:bg-primary hover:text-white transition duration-300">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="#"
+                <a href="https://twitter.com/alabioluwaseg14"
                   class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center text-primary hover:bg-blue-500 hover:text-white transition duration-300">
                   <i class="fab fa-twitter"></i>
                 </a>
@@ -540,7 +524,7 @@
                   class="w-10 h-10 bg-pink-100 rounded-full flex items-center justify-center text-pink-500 hover:bg-pink-500 hover:text-white transition duration-300">
                   <i class="fab fa-instagram"></i>
                 </a>
-                <a href="#"
+                <a href="https://github.com/Mckings1"
                   class="w-10 h-10 bg-gray-100 rounded-full flex items-center justify-center text-gray-700 hover:bg-gray-700 hover:text-white transition duration-300">
                   <i class="fab fa-github"></i>
                 </a>
@@ -567,7 +551,6 @@
               <li><a href="#home" class="text-gray-400 hover:text-white transition">Home</a></li>
               <li><a href="#about" class="text-gray-400 hover:text-white transition">About</a></li>
               <li><a href="portfolio" class="text-gray-400 hover:text-white transition">Portfolio</a></li>
-              <li><a href="#process" class="text-gray-400 hover:text-white transition">Process</a></li>
               <li><a href="#testimonials" class="text-gray-400 hover:text-white transition">Testimonials</a></li>
               <li><a href="#contact" class="text-gray-400 hover:text-white transition">Contact</a></li>
             </ul>
@@ -575,10 +558,11 @@
           <div class="space-y-4">
             <h3 class="text-lg font-semibold">Services</h3>
             <ul class="space-y-2">
-              <li><a href="#ui-ux" class="text-gray-400 hover:text-white transition">UI/UX Design</a></li>
-              <li><a href="#mobile" class="text-gray-400 hover:text-white transition">Mobile Design</a></li>
-              <li><a href="#website" class="text-gray-400 hover:text-white transition">Website Design</a></li>
-              <li><a href="#user-experience" class="text-gray-400 hover:text-white transition">User Experience</a></li>
+              <li><a href="#ui-ux" class="text-gray-400 hover:text-white transition">Web Developer</a></li>
+              <li><a href="#mobile" class="text-gray-400 hover:text-white transition">Frontend Engineer</a></li>
+              <li><a href="#website" class="text-gray-400 hover:text-white transition">WordPress Developer</a></li>
+              <li><a href="#user-experience" class="text-gray-400 hover:text-white transition">Full Stack Developer</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -609,6 +593,7 @@
     <i class="fas fa-arrow-up"></i>
   </button>
 
+  <script src="index.js"></script>
 
 </body>
 
