--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
           <div class="relative">
             <div class="w-64 h-64 rounded-lg overflow-hidden shadow-lg">
-              <img src="https://via.placeholder.com/300" alt="About" class="w-full h-full object-cover">
+              <img src="imgimg.jpg" alt="About" class="w-full h-full object-cover">
             </div>
             <div class="absolute -bottom-5 -left-5 bg-white p-4 rounded-lg shadow-md">
               <div class="flex items-center">
@@ -157,16 +157,22 @@
         <div class="md:w-2/3 md:pl-12">
           <h3 class="text-2xl font-semibold mb-6">Who am I?</h3>
           <p class="text-gray-600 mb-6">
-            I'm a passionate web developer with expertise in creating modern, responsive websites and web applications.
-            With a strong foundation in both front-end and back-end technologies, I bring ideas to life through clean,
-            efficient code and intuitive user interfaces.
+            I'm a passionate Front-End Developer with
+            2+ years of experience in creating modern, responsive websites and web applications. Currently working as a
+            freelance Web Developer and Automation Specialist, I help businesses build responsive websites, streamline
+            operations, and solve real-world problems through clean, efficient code.
           </p>
           <p class="text-gray-600 mb-8">
-            My journey in web development began 5 years ago, and since then I've had the privilege of working with
-            various clients and companies, helping them establish their online presence and solve complex problems
-            through technology.
-          </p>
+            My toolkit includes React, JavaScript, HTML/CSS, ProcessMaker, SQL, and automation tools like n8n and
+            teable. I'm certified by Meta and have a track record of delivering cross-functional solutions that blend
+            design, functionality, and performance.
 
+          </p>
+          <p class="text-gray-600 mb-8">
+            Beyond development, I provide ongoing support, documentation, and client training to ensure long-term
+            platform success. Whether it’s building from scratch or improving existing systems, I’m passionate about
+            bringing ideas to life with smart, scalable web solutions.
+          </p>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
             <div class="bg-white p-6 rounded-lg shadow-sm hover:shadow-md transition duration-300">
               <div class="flex items-center mb-3">
@@ -187,12 +193,12 @@
                 <h4 class="ml-3 font-semibold">Experience</h4>
               </div>
               <p class="text-gray-600">
-                2+ years of professional experience in web development
+                2+ years of professional experience in Web development, and Automation.
               </p>
             </div>
           </div>
 
-          <a href="#"
+          <a href="OLUWASEGUN MICHAEL ALABI Front-End CV.pdf"
             class="inline-flex items-center px-6 py-3 border border-primary text-primary rounded-lg font-medium hover:bg-blue-50 transition duration-300">
             Download CV <i class="fas fa-download ml-2"></i>
           </a>
