--- a/index.html
+++ b/index.html
@@ -219,23 +219,24 @@
         <!-- Project 1 -->
         <div class="project-card bg-white rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
           <div class="relative">
-            <img src="https://via.placeholder.com/600x400" alt="Project 1" class="w-full h-56 object-cover">
+            <img src="Thumbnail1.PNG" alt="Project 1" class="w-full h-56 object-cover">
             <div
               class="project-overlay absolute inset-0 bg-primary/90 flex items-center justify-center opacity-0 transition duration-300 transform translate-y-4">
               <div class="text-center p-6">
-                <h3 class="text-white text-xl font-bold mb-2">E-commerce Website</h3>
-                <p class="text-white mb-4">A fully responsive e-commerce platform with payment integration</p>
-                <a href="#" class="inline-block px-4 py-2 bg-white text-primary rounded font-medium">View Details</a>
+                <h3 class="text-white text-xl font-bold mb-2"> Website</h3>
+                <p class="text-white mb-4">A fully responsive platform with payment integration</p>
+                <a href="https://cleaning.steelgreygroup.com/"
+                  class="inline-block px-4 py-2 bg-white text-primary rounded font-medium">View Details</a>
               </div>
             </div>
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2">E-commerce Website</h3>
-            <p class="text-gray-600 mb-4">A modern online store with product management and checkout system</p>
+            <h3 class="text-xl font-semibold mb-2">Cleaning Service Website</h3>
+            <p class="text-gray-600 mb-4">A modern online cleaning service website</p>
             <div class="flex flex-wrap gap-2">
-              <span class="px-3 py-1 bg-blue-100 text-primary text-sm rounded-full">React</span>
-              <span class="px-3 py-1 bg-green-100 text-secondary text-sm rounded-full">Node.js</span>
-              <span class="px-3 py-1 bg-purple-100 text-purple-600 text-sm rounded-full">MongoDB</span>
+              <span class="px-3 py-1 bg-blue-100 text-primary text-sm rounded-full">Wordpress</span>
+              <span class="px-3 py-1 bg-green-100 text-secondary text-sm rounded-full">Php</span>
+              <span class="px-3 py-1 bg-purple-100 text-purple-600 text-sm rounded-full">Javascript</span>
             </div>
           </div>
         </div>
@@ -243,22 +244,23 @@
         <!-- Project 2 -->
         <div class="project-card bg-white rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
           <div class="relative">
-            <img src="https://via.placeholder.com/600x400" alt="Project 2" class="w-full h-56 object-cover">
+            <img src="data reselling.PNG" alt="Project 2" class="w-full h-56 object-cover">
             <div
               class="project-overlay absolute inset-0 bg-primary/90 flex items-center justify-center opacity-0 transition duration-300 transform translate-y-4">
               <div class="text-center p-6">
-                <h3 class="text-white text-xl font-bold mb-2">Task Management App</h3>
-                <p class="text-white mb-4">A productivity app for organizing tasks and projects</p>
-                <a href="#" class="inline-block px-4 py-2 bg-white text-primary rounded font-medium">View Details</a>
+                <h3 class="text-white text-xl font-bold mb-2">Data1st Website</h3>
+                <p class="text-white mb-4">A data reselling website</p>
+                <a href="https://data1st.vercel.app"
+                  class="inline-block px-4 py-2 bg-white text-primary rounded font-medium">View Details</a>
               </div>
             </div>
           </div>
           <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2">Task Management App</h3>
-            <p class="text-gray-600 mb-4">An intuitive app for managing personal and team tasks</p>
+            <h3 class="text-xl font-semibold mb-2">Data1st Website</h3>
+            <p class="text-gray-600 mb-4">An intuitive app for data reselling</p>
             <div class="flex flex-wrap gap-2">
-              <span class="px-3 py-1 bg-blue-100 text-primary text-sm rounded-full">Vue.js</span>
-              <span class="px-3 py-1 bg-yellow-100 text-yellow-600 text-sm rounded-full">Firebase</span>
+              <span class="px-3 py-1 bg-blue-100 text-primary text-sm rounded-full">React.js</span>
+              <span class="px-3 py-1 bg-yellow-100 text-yellow-600 text-sm rounded-full">JavaScript</span>
               <span class="px-3 py-1 bg-red-100 text-red-600 text-sm rounded-full">Tailwind CSS</span>
             </div>
           </div>
@@ -267,13 +269,14 @@
         <!-- Project 3 -->
         <div class="project-card bg-white rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
           <div class="relative">
-            <img src="https://via.placeholder.com/600x400" alt="Project 3" class="w-full h-56 object-cover">
+            <img src="Portfolio design.PNG" alt="Project 3" class="w-full h-56 object-cover">
             <div
               class="project-overlay absolute inset-0 bg-primary/90 flex items-center justify-center opacity-0 transition duration-300 transform translate-y-4">
               <div class="text-center p-6">
                 <h3 class="text-white text-xl font-bold mb-2">Portfolio Website</h3>
                 <p class="text-white mb-4">A custom portfolio website for a creative professional</p>
-                <a href="#" class="inline-block px-4 py-2 bg-white text-primary rounded font-medium">View Details</a>
+                <a href="https://deandre-portfolio.netlify.app"
+                  class="inline-block px-4 py-2 bg-white text-primary rounded font-medium">View Details</a>
               </div>
             </div>
           </div>
@@ -283,14 +286,14 @@
             <div class="flex flex-wrap gap-2">
               <span class="px-3 py-1 bg-blue-100 text-primary text-sm rounded-full">HTML/CSS</span>
               <span class="px-3 py-1 bg-yellow-100 text-yellow-600 text-sm rounded-full">JavaScript</span>
-              <span class="px-3 py-1 bg-green-100 text-secondary text-sm rounded-full">GSAP</span>
+              <span class="px-3 py-1 bg-green-100 text-secondary text-sm rounded-full">Tailwind Css</span>
             </div>
           </div>
         </div>
       </div>
 
       <div class="text-center mt-12">
-        <a href="#"
+        <a href="https://mckings-portfolio.netlify.app/portfolio"
           class="inline-flex items-center px-6 py-3 bg-primary text-white rounded-lg font-medium hover:bg-blue-700 transition duration-300">
           View All Projects <i class="fas fa-arrow-right ml-2"></i>
         </a>
