--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
     <div class="container mx-auto px-4 md:px-6 lg:px-8">
       <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
         <div class="mb-6 md:mb-0">
-          <a href="#" class="text-2xl font-bold gradient-text">Portfolio</a>
+          <a href="#" class="text-2xl font-bold gradient-text">Mckings</a>
           <p class="text-gray-400 mt-2">Creating digital experiences that matter</p>
         </div>
         <div class="md:col-span-2 grid grid-cols-1 md:grid-cols-2 gap-12">
