--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!-- Navigation -->
   <nav class="fixed w-full bg-white/90 backdrop-blur-md shadow-sm z-50">
     <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
-      <a href="#" class="text-2xl font-bold gradient-text">Portfolio</a>
+      <a href="#" class="text-2xl font-bold gradient-text">Mckings</a>
       <div class="hidden md:flex space-x-8">
         <a href="#home" class="nav-link font-medium">Home</a>
         <a href="#about" class="nav-link font-medium">About</a>
