--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
         <div class="md:w-2/3 md:pl-12">
           <h3 class="text-2xl font-semibold mb-6">Who am I?</h3>
           <p class="text-gray-600 mb-6">
-            I'm a passionate Front-End Developer with
+            I'm a passionate Front-End Engineer with
             2+ years of experience in creating modern, responsive websites and web applications. Currently working as a
-            freelance Web Developer and Automation Specialist, I help businesses build responsive websites, streamline
+            freelance Web Developer and AI/Automation Specialist, I help businesses build responsive websites,
+            streamline
             operations, and solve real-world problems through clean, efficient code.
           </p>
           <p class="text-gray-600 mb-8">
