--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <i class="fas fa-trophy text-xl"></i>
               </div>
               <div class="ml-3">
-                <p class="font-bold">2+ Years</p>
+                <p class="font-bold" id="experience"></p>
                 <p class="text-sm text-gray-600">Experience</p>
               </div>
             </div>
@@ -158,10 +158,11 @@
           <h3 class="text-2xl font-semibold mb-6">Who am I?</h3>
           <p class="text-gray-600 mb-6">
             I'm a passionate Front-End Engineer with
-            2+ years of experience in creating modern, responsive websites and web applications. Currently working as a
+            <span class="font-bold" id="yoe1"></span> of experience in creating modern, responsive websites and
+            web
+            applications. Currently working as a
             freelance Web Developer and AI/Automation Specialist, I help businesses build responsive websites,
-            streamline
-            operations, and solve real-world problems through clean, efficient code.
+            streamline operations, and solve real-world problems through clean, efficient code.
           </p>
           <p class="text-gray-600 mb-8">
             My toolkit includes React, JavaScript, HTML/CSS, ProcessMaker, SQL, and automation tools like n8n and
@@ -194,7 +195,8 @@
                 <h4 class="ml-3 font-semibold">Experience</h4>
               </div>
               <p class="text-gray-600">
-                2+ years of professional experience in Web development, and Automation.
+                <span class="font-bold" id="yoe2"></span> of professional experience in Web development, and
+                Automation.
               </p>
             </div>
           </div>
