--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </div>
           </div>
 
-          <a href="OLUWASEGUN MICHAEL ALABI Front-End CV.pdf"
+          <a href="OLUWASEGUN MICHAEL ALABI devAI.pdf"
             class="inline-flex items-center px-6 py-3 border border-primary text-primary rounded-lg font-medium hover:bg-blue-50 transition duration-300">
             Download CV <i class="fas fa-download ml-2"></i>
           </a>
